--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@
 
 # Website details
 title: VolcAddons
-author: Volcaronitee
+author: Volcaronitee1
 favicon: "/assets/img/favicon.png"
 
 ###############################################
