--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ social-network-links:
   email: "volcaronitee8533@gmail.com"
 #  rss: true  # remove this line if you don't want to show an RSS link at the bottom
 #  facebook: deanattali
-  github: zhenga8533
+  github: volcaronitee1
 #  twitter: daattali
 #  patreon: DeanAttali
   youtube: "@RickAstleyYT"
@@ -73,7 +73,7 @@ social-network-links:
 #  bluesky: yourname
 #  ORCID: your ORCID ID
 #  google-scholar: your google scholar
-  discord: "ftxB4kG2tw"
+#  discord: yourserver
 #  kaggle: yourname
 #  hackerrank: yourname
 #  gitlab: yourname
