--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ social-network-links:
   email: "volcaronitee8533@gmail.com"
 #  rss: true  # remove this line if you don't want to show an RSS link at the bottom
 #  facebook: deanattali
-  github: volcaronitee1
+  github: volcaronitee1/VolcAddons
 #  twitter: daattali
 #  patreon: DeanAttali
   youtube: "@RickAstleyYT"
